--- a/gallery.html
+++ b/gallery.html
@@ -496,6 +496,11 @@
                 </a>
             </div>
             <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/c79.jpg" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/c79.jpg" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
                 <a href="./gallery/t00.jpg" class="fancybox" rel="ligthbox">
                     <img src="./thumbnails/t00.jpg" class="zoom img-fluid " alt="">
                 </a>
@@ -685,6 +690,32 @@
                     <img src="./thumbnails/t37.png" class="zoom img-fluid " alt="">
                 </a>
             </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/t38.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/t38.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/t39.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/t39.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/t40.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/t40.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/t41.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/t41.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/t42.jpg" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/t42.jpg" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+
         </div>
     </div>
     <div class="container mob">
@@ -767,6 +798,7 @@
             <img src="./med/c76.png" />
             <img src="./med/c77.jpg" />
             <img src="./med/c78.jpg" />
+            <img src="./med/c79.jpg" />
             <img src="./med/t00.jpg" />
             <img src="./med/t01.jpg" />
             <img src="./med/t02.png" />
@@ -805,6 +837,11 @@
             <img src="./med/t35.png" />
             <img src="./med/t36.jpg" />
             <img src="./med/t37.png" />
+            <img src="./med/t38.png" />
+            <img src="./med/t39.png" />
+            <img src="./med/t40.png" />
+            <img src="./med/t41.png" />
+            <img src="./med/t42.jpg" />
         </div>
     </div>
 
