--- a/agenda.html
+++ b/agenda.html
@@ -113,22 +113,30 @@
                             <table class="table">
                                 <tbody>
                                     <tr>
+                                       <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            SEP<br><span class="date">05</span></td>
+                                        <td><span class="tdtitle">ASUNCIÓN, Paraguay</span><br>
+                                        Congreso Apologético <br>
+                                           </td>
+                                    <tr>
+                                        <td scope="row" style="text-align: center;">
+                                            MAY<br><span class="date">21</span></td>
+                                        <td><span class="tdtitle">MERLO, San Luis</span><br>
+                                        Conferencia abierta</td>
+                                    </tr>   
+                                    <tr>
                                         <td scope="row" style="text-align: center;">
                                             MAY<br><span class="date">15</span></td>
                                         <td><span class="tdtitle">Costa Rica</span><br>
                                         </td>
                                     </tr>
-                                    <tr>
-                                        <td scope="row" style="text-align: center;">
-                                            MAY<br><span class="date">05</span></td>
-                                        <td><span class="tdtitle">ASUNCIÓN, Paraguay</span><br>
-                                        </td>
-                                        <tr>
+                                    
                                         <td scope="row" style="text-align: center;">
                                             ABR<br><span class="date">18</span></td>
                                         <td><span class="tdtitle">ESTEBAN ECHEVERRÍA, Buenos Aires </span><br>
                                             Primer Congreso de Pastores<br>
-                                            .</td>
+                                            Consejo Unido de Pastores de Esteban Echeverría.</td>
                                             </tr>                                        
                                     </tr>
                                     <tr>
