--- a/gallery.html
+++ b/gallery.html
@@ -715,6 +715,26 @@
                     <img src="./thumbnails/t42.jpg" class="zoom img-fluid " alt="">
                 </a>
             </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/t43.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/t43.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/t44.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/t44.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/t45.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/t45.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
+            <div class="col-lg-3 col-md-4 col-xs-6 thumb">
+                <a href="./gallery/t46.png" class="fancybox" rel="ligthbox">
+                    <img src="./thumbnails/t46.png" class="zoom img-fluid " alt="">
+                </a>
+            </div>
 
         </div>
     </div>
@@ -842,6 +862,10 @@
             <img src="./med/t40.png" />
             <img src="./med/t41.png" />
             <img src="./med/t42.jpg" />
+            <img src="./med/t43.png" />
+            <img src="./med/t44.png" />
+            <img src="./med/t45.png" />
+            <img src="./med/t46.png" />
         </div>
     </div>
 
